# rSysMon

./: README.md  config_example.py  requirements.txt  setup.cfg
rsysmon/: __init__.py  __main__.py  config.py  utils.py
rsysmon/widgets/: __init__.py  clock.py  disk.py  media.py  network.py  py3status.py  system.py
