[metadata]
name = rSysMon
version = 1.1.1
author = Zack Didcott
summary = An extensible rich system monitor

[options]
packages =
  rsysmon
  rsysmon.widgets
python_requires = >= 3.9
install_requires =
  rich
  psutil
  human-readable

[options.entry_points]
console_scripts =
  rsysmon = rsysmon.__main__:main
